Fixed nav and styles.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 ---
-layout: default
+layout: page
 title: Home
 ---
 
-<div id="index">
-    <h1>Home</h1>
-    <a href="{{ "/feed.xml" | prepend: site.baseurl }}">Subscribe via RSS</a>
-</div>
+I'm Scott Linder. I'm a programmer, system administrator, and avid plaid
+wearer. This is my personal website.
